src/tests/testfiles/binary-operators/types-23.txt
Error at 2:5: Logic operator operands must have the same type (have float and int)
1.0 || 0;
^
